[package]
name = "rust-xray"
version = "0.1.0"
edition = "2021"

[dependencies]
aead = "0.5.2"
base64 = "0.22.1"
bytes = "1.7.1"
hkdf = "0.12.4"
rustls-pki-types = "1.8.0"
sha2 = "0.10.8"
tokio = {version = "1.40.0", features = ["full"]}
x25519-dalek = {version = "2.0.1", features = ["static_secrets", "getrandom"]}
zeroize = "1.8.1"


